# excelr

./: .gitignore  LICENSE  README.md  _excelr.pyx  benchmark.ipynb  excelr.py  pyproject.toml  release  tests.py
data/: 500 Sales Records.csv
tests/: test_excelr.py  test_mypy.py  test_property_based.py  test_pycodestyle.py
xlsx_template/: [Content_Types].xml
xlsx_template/docProps/: app.xml  core.xml
xlsx_template/xl/: styles.xml
xlsx_template/xl/worksheets/: sheet1.xml
