[tool.poetry]
name = "excelr"
version = "0.1.0"
description = ""
authors = ["Daniel Bradburn <daniel@crunchrapps.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cython = "^0.29.22"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pandas = "^1.2.3"
hypothesis = "^6.8.1"
openpyxl = "^3.0.7"
memory-profiler = "^0.58.0"
pyinstrument = "^3.4.1"
seaborn = "^0.11.1"
lxml = "^4.6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
